# metamorph

./: .gitignore  CMakeLists.txt  README.md  main.c  mingw.cmake
.github/workflows/: build.yml
assets/: locations.txt
assets/dialogue/: monologues.txt
include/: dialogue.h  game.h  monologue.h  player.h  ui.h
maps/: logic kimia 2_logic.csv  logic kimia_logic.csv  rooms.txt
src/: dialogue.c  game.c  main.c  monologue.c  player.c  story.c  ui.c  world.c
